--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Nick Gu",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-latest": "^6.24.0",
@@ -23,6 +24,7 @@
     "babel-register": "^6.24.0",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.27.3",
+    "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
