--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
+    "client": "webpack-dev-server",
     "test": "",
     "prod": "",
+    "server": "babel-node ./src/server/server.js",
     "clean-dist": "rimraf ./dist && mkdir dist"
   },
   "repository": {
@@ -16,23 +17,30 @@
   "author": "Nick Gu",
   "license": "ISC",
   "dependencies": {
+    "@blueprintjs/core": "^1.13.0",
     "axios": "^0.15.3",
+    "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-latest": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-register": "^6.24.0",
+    "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "css-loader": "^0.27.3",
     "express": "^4.15.2",
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.10.1",
     "html-webpack-plugin": "^2.28.0",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
     "style-loader": "^0.15.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
