--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-webpack-plugin": "^2.28.0",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "mongoose": "^4.9.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
