--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.6.0",
+    "redux-form": "^6.6.0",
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.15.0",
     "webpack": "^2.2.1",
