--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "client": "webpack-dev-server",
     "test": "",
     "prod": "",
+    "prebuild": "npm run clean-dist",
+    "build": "babel-node ./build/build.js",
     "server": "babel-node ./src/server/server.js",
     "clean-dist": "rimraf ./dist && mkdir dist"
   },
@@ -17,7 +19,6 @@
   "author": "Nick Gu",
   "license": "ISC",
   "dependencies": {
-    "@blueprintjs/core": "^1.13.0",
     "axios": "^0.15.3",
     "babel-cli": "^6.24.0",
     "babel-core": "^6.24.0",
@@ -45,6 +46,7 @@
     "redux-thunk": "^2.2.0",
     "style-loader": "^0.15.0",
     "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
     "webpack-dev-server": "^2.4.2"
   }
 }
